<?xml version="1.0"?>
<package>
  <name>rtt_dynamic_reconfigure</name>
  <version>2.7.0</version>
  <description>The rtt_dynamic_reconfigure package</description>

  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>

  <license>GPL</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt_roscomm</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>rtt_roscomm</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rtt_ros>
      <plugin_depend>rtt_roscomm</plugin_depend>
    </rtt_ros>
  </export>
</package>
